@@ -211,8 +211,11 @@ void NetworkProcess::setCookieStoragePartitioningEnabled(bool enabled)
 void NetworkProcess::syncAllCookies()
 {
 #if !PLATFORM(IOS)
-#if (__MAC_OS_X_VERSION_MIN_REQUIRED <= 101200)
+#if (__MAC_OS_X_VERSION_MIN_REQUIRED < 101300)
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
     _CFHTTPCookieStorageFlushCookieStores();
+#pragma clang diagnostic pop
 #else
     CFHTTPCookieStorageFlushCookieStores();
 #endif
