@@ -1,3 +1,12 @@
+2017-04-30  Brady Eidson  <beidson@apple.com>
+
+        Fix r215991
+        https://bugs.webkit.org/show_bug.cgi?id=171483
+
+        Unreviewed.
+
+        * platform/spi/cf/CFNetworkSPI.h:
+
 2017-04-30  Dan Bernstein  <mitz@apple.com>
 
         Tried to fix the iOS build after r215992
